crates/tokmd-analysis-format/tests/snapshots/snapshot_analysis__empty_receipt_md.snap
---
source: crates/tokmd-analysis-format/tests/snapshot_analysis.rs
assertion_line: 238
expression: md
---
# tokmd analysis

Preset: `receipt`

## Inputs

- `.`
